--- a/src/scss/idrc.scss
+++ b/src/scss/idrc.scss
@@ -1,10 +1,9 @@
 @charset "UTF-8";
 
-// Tailwind base and components
+// Tailwind base
 
 /* purgecss start ignore */
 @tailwind base;
-@tailwind components;
 
 /* purgecss end ignore */
 
@@ -41,8 +40,9 @@
 
 // 6. Page-specific styles
 @import
-  'pages/home',
   'pages/generic',
+  'pages/home',
+  'pages/projects-tools',
   'pages/news',
   'pages/post',
   'pages/404';
@@ -50,6 +50,3 @@
 // 7. Themes
 @import
   'themes/default';
-
-// Tailwind utilities
-@tailwind utilities;
