--- a/src/_includes/layouts/projects.njk
+++ b/src/_includes/layouts/projects.njk
@@ -3,23 +3,23 @@
 {% set pageType = 'page--projects-and-tools' %}
 
 {% block content %}
-    <article class="container mx-auto">
-        <header class="py-20 bg-{{ headerBgColor if headerBgColor else 'indigo-100' }} text-{{ headerTextColor if headerTextColor else 'black' }}">
-            <div class="container px-6 mx-auto">
-                <h1 class="lg:w-1/2">{{ title }}</h1>
+    <article class="container">
+        <header class="header{{ ' header--bg-' + headerBgColor if headerBgColor }}{{ ' header--fg-' + headerTextColor if headerTextColor }}">
+            <div class="container inner">
+                <h1>{{ title }}</h1>
                 {% if intro %}
-                <div class="mt-5 text-sm lg:w-1/2 intro">{{ intro | markdownFilter | safe }}</div>
+                <div class="intro">{{ intro | markdownFilter | safe }}</div>
                 {% endif %}
             </div>
         </header>
-        <section id="projects" class="py-20 text-black bg-indigo-100 section section--full">
-            <div class="container px-6 mx-auto">
-                <div class="lg:w-full section__content">
-                    <span class="block w-20 mb-10 border-b-2 border-indigo-500 hr"></span>
+        <section id="projects" class="section section--full">
+            <div class="container">
+                <div class="section__content">
+                    <span class="hr"></span>
                     <h2>Projects</h2>
-                    <div class="lg:flex lg:flex-row lg:flex-wrap">
+                    <div class="projects">
                         {% for project in projects %}
-                        <div class="mt-8 lg:w-1/2 {{ ' lg:pl-6' if loop.index % 2 == 0 else ' lg:pr-6' }}">
+                        <div class="project">
                             <h3>{{ project.name }}{{ " (" + project.shortName + ")" if project.shortName }}</h3>
                             {{ project.description | markdownFilter | safe }}
                             {% if project.tags %}
@@ -36,14 +36,14 @@
                 </div>
             </div>
         </section>
-        <section id="tools" class="py-20 text-black bg-indigo-100 section section--full">
-            <div class="container px-6 mx-auto">
-                <div class="lg:w-full section__content">
-                    <span class="block w-20 mb-10 border-b-2 border-indigo-500 hr"></span>
+        <section id="tools" class="section section--full">
+            <div class="container">
+                <div class="section__content">
+                    <span class="hr"></span>
                     <h2>Tools</h2>
-                    <div class="lg:flex lg:flex-row lg:flex-wrap">
+                    <div class="tools">
                         {% for tool in tools %}
-                        <div class="mt-8 lg:w-1/2 {{ ' lg:pl-6' if loop.index % 2 == 0 else ' lg:pr-6' }}">
+                        <div class="tool">
                             <h3>{{ tool.name }}{{ " (" + tool.shortName + ")" if tool.shortName }}</h3>
                             {{ tool.description | markdownFilter | safe }}
                             {% if tool.tags %}
