--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -49,7 +49,7 @@ a:visited .underline {
     background-color: currentColor;
     content: "";
     margin-bottom: -0.25rem;
-    margin-left: 0;
+    margin-left: 0.25rem;
     mask-image: url('../images/external.svg');
     mask-position: center;
     mask-repeat: no-repeat;
@@ -58,7 +58,7 @@ a:visited .underline {
   }
 }
 
-.bg-indigo-900 {
+.--bg-indigo-900 {
   a:hover,
   a:focus {
     background: $indigo-500;
@@ -70,9 +70,9 @@ a:visited .underline {
   }
 }
 
-.bg-blue-500,
-.bg-red-500,
-.bg-yellow-500 {
+.--bg-blue-500,
+.--bg-red-500,
+.--bg-yellow-500 {
   a:hover,
   a:focus {
     background: $white;
@@ -98,4 +98,32 @@ ol {
 
 li + li {
   margin-top: 0;
+}
+
+@each $name, $color in $colors {
+  .banner.banner--bg-#{$name} {
+    background: $color;
+  }
+
+  .header--bg-#{$name} {
+    background: $color;
+  }
+
+  .section.section--bg-#{$name} {
+    background: $color;
+  }
+}
+
+@each $name, $color in $colors {
+  .banner.banner--fg-#{$name} {
+    color: $color;
+  }
+
+  .header--fg-#{$name} {
+    color: $color;
+  }
+
+  .section.section--fg-#{$name} {
+    color: $color;
+  }
 }
