fix: page previews for new pages

--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -12,34 +12,50 @@
                 {% endif %}
             </div>
         </header>
-        {% for section in sections %}
-        <section id="{{ section.title | slug }}" class="section
-        {{ 'section--full-bleed' if section.desktopWidth == 'full-bleed' }}
-        {{ 'section--full' if section.desktopWidth == 'full' }}
-        {{ 'section--half' if section.desktopWidth == 'half' }}
-        {{ 'section--third' if section.desktopWidth == 'third' }}
+        {%- if sections %}
+            {%- for section in sections %}
+            {% set sectionTitle = '' %}
+            {% set sectionContent = '' %}
+            {% set desktopWidth = 'section--full' %}
+            {% set imageOrderDesktop = '' %}
+
+            {% if section.title %}
+                {% set sectionTitle = section.title %}
+            {% endif %}
+            {% if section.content %}
+                {% set sectionContent = section.content %}
+            {% endif %}
+            {% if section.desktopWidth %}
+                {% set desktopWidth = 'section--' + section.desktopWidth %}
+            {% endif %}
+            {% if section.imageOrderDesktop %}
+                {% set imageOrderDesktop = section.imageOrderDesktop %}
+            {% endif %}
+        <section id="{{ sectionTitle | slug }}" class="section
+        {{ desktopWidth }}
         {{ 'section--image' if section.image }}
-        {{ 'center' if section.desktopAlignment == 'center' }}
+        {{ desktopAlignment if section.desktopAlignment }}
         {{ 'section--bg-' + section.backgroundColor if section.backgroundColor }}
-        {{ 'section--fg-' + section.textColor if section.textColor }}">
+        {{ 'section--fg-' + section.textColor if section.textColor }}"> 
             <div class="container">
-                {% if section.imageOrder == 'start' %}
-                <figure class="{{ 'swap' if section.imageOrderDesktop == 'swap' }} {{ 'shadow-' + section.imageShadow if section.imageShadow }}">
+                {% if section.image and section.imageOrder == 'start' %}
+                <figure class="{{ imageOrderDesktop }} {{ 'shadow-' + section.imageShadow if section.imageShadow else 'indigo-500' }}">
                     <img src="{{ section.image }}" {% if section.image2x %}srcset="{{ section.image }} 1x, {{ section.image2x }} 2x" {% endif %}alt="{{ section.imageAltText }}" width="640" height="427" />
                 </figure>
                 {% endif %}
                 <div class="section__content">
                     {% if section.borderColor %}<span class="hr hr--{{ section.borderColor }}"></span>{% endif %}
-                    <h2>{{ section.title }}</h2>
-                    {{ section.content | markdownFilter | safe }}
+                    <h2>{{ sectionTitle | safe }}</h2>
+                    {{ sectionContent | markdownFilter | safe }}
                 </div>
-                {% if section.imageOrder == 'end' %}
-                <figure class="{{ 'swap' if section.imageOrderDesktop == 'swap' }} shadow-{{ section.imageShadow if section.imageShadow else 'indigo-500' }}">
+                {% if section.image and section.imageOrder == 'end' %}
+                <figure class="{{ imageOrderDesktop }} shadow-{{ section.imageShadow if section.imageShadow else 'indigo-500' }}">
                     <img src="{{ section.image }}" {% if section.image2x %}srcset="{{ section.image }} 1x, {{ section.image2x }} 2x" {% endif %}alt="{{ section.imageAltText }}" width="640" height="427" />
                 </figure>
                 {% endif %}
             </div>
         </section>
-        {% endfor %}
+            {%- endfor %}
+        {%- endif %}
     </article>
 {% endblock %}
