--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -51,19 +51,23 @@ h2 + *,
 }
 
 h3 + p {
-  margin-top: 1.5rem;
-}
-
-h4 + p,
-.h4 + p {
-  margin-top: 0;
-}
-
-.h3 + p {
-  margin-top: 0.25rem;
+  margin-top: 1rem;
 }
 
 * + ul,
 * + ol {
   margin-top: 1.5rem;
+}
+
+h4 + p,
+h4 + ul,
+h4 + ol,
+.h4 + p,
+.h4 + ul,
+.h4 + ol {
+  margin-top: 0.75rem;
+}
+
+.h3 + p {
+  margin-top: 0.25rem;
 }
