--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -3,6 +3,7 @@
 // -----------------------------------------------------------------------------
 
 @font-face {
+  font-display: swap;
   font-family: 'Merriweather';
   font-style: normal;
   font-weight: 900;
@@ -14,6 +15,7 @@
 }
 
 @font-face {
+  font-display: swap;
   font-family: 'Work Sans';
   font-style: normal;
   font-weight: 500;
@@ -24,6 +26,7 @@
 }
 
 @font-face {
+  font-display: swap;
   font-family: 'Work Sans';
   font-style: normal;
   font-weight: 600;
@@ -34,6 +37,7 @@
 }
 
 @font-face {
+  font-display: swap;
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
@@ -45,6 +49,7 @@
 }
 
 @font-face {
+  font-display: swap;
   font-family: 'Open Sans';
   font-style: italic;
   font-weight: 400;
@@ -56,6 +61,7 @@
 }
 
 @font-face {
+  font-display: swap;
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 700;
