--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -11,6 +11,10 @@
         <link rel="manifest" href="/manifest.webmanifest">
         <script>document.documentElement.classList.remove('no-js');</script>
         <script type="text/javascript" src="{{ manifest['/js/idrc.js'] }}" defer></script>
+        <script>
+        if ("serviceWorker" in navigator)
+            navigator.serviceWorker.register("/service-worker.js");
+        </script>
         {% block head %}
         {% endblock %}
     </head>
