--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -11,6 +11,10 @@
         <link rel="manifest" href="/manifest.webmanifest">
         <script>document.documentElement.classList.remove('no-js');</script>
         <script type="text/javascript" src="{{ manifest['/js/idrc.js'] }}" defer></script>
+        <script>
+        if ("serviceWorker" in navigator)
+            navigator.serviceWorker.register("/sw.js");
+        </script>
         {% block head %}
         {% endblock %}
     </head>
@@ -21,15 +25,6 @@
             {% endblock content %}
         </main>
         {% if previewMode %}{% else %}{% include "partials/global/footer.njk" %}
-        {# {% if global.environment !== 'development' %}
-        <script>
-            if ('serviceWorker' in navigator) {
-            window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/service-worker.js');
-            });
-            }
-        </script>
-        {% endif %} #}
         <script src="https://identity.netlify.com/v1/netlify-identity-widget.js" defer></script>
     </body>
 </html>
