--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -4,13 +4,13 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         {% include "partials/global/meta-info.njk" %}
-        <link rel="stylesheet" type="text/css" href="{{ manifest['/css/idrc.css'] }}" />
+        <link rel="stylesheet" type="text/css" href="/css/idrc.css" />
         <link rel="icon" href="/images/favicon.svg" type="image/svg+xml" /> 
         <link rel="icon" href="/images/favicon.png" />
         <link rel="apple-touch-icon" href="/images/icon-192.png">
         <link rel="manifest" href="/manifest.webmanifest">
         <script>document.documentElement.classList.remove('no-js');</script>
-        <script type="text/javascript" src="{{ manifest['/js/idrc.js'] }}" defer></script>
+        <script type="text/javascript" src="/js/idrc.js" defer></script>
         {% if global.environment !== 'development' %}
         <script>
         if ("serviceWorker" in navigator)
