--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -11,12 +11,12 @@
         <link rel="manifest" href="/manifest.webmanifest">
         <script>document.documentElement.classList.remove('no-js');</script>
         <script type="text/javascript" src="/js/idrc.js" defer></script>
-        {% if global.environment !== 'development' %}
+        {# {% if global.environment !== 'development' %}
         <script>
         if ("serviceWorker" in navigator)
-            navigator.serviceWorker.unregister("/sw.js");
+            navigator.serviceWorker.register("/sw.js");
         </script>
-        {% endif %}
+        {% endif %} #}
         {% block head %}
         {% endblock %}
     </head>
