--- a/src/_includes/layouts/projects.njk
+++ b/src/_includes/layouts/projects.njk
@@ -4,7 +4,7 @@
 
 {% block content %}
     <article class="container">
-        <header class="header{{ ' header--bg-' + headerBgColor if headerBgColor }}{{ ' header--fg-' + headerTextColor if headerTextColor }}">
+        <header>
             <div class="container inner">
                 <h1>{{ title }}</h1>
                 {% if intro %}
