--- a/src/_includes/partials/global/header.njk
+++ b/src/_includes/partials/global/header.njk
@@ -1,4 +1,4 @@
-<header role="banner" class="banner{{ ' banner--bg-' + headerBgColor if headerBgColor }}{{ ' banner--fg-' + headerTextColor if headerTextColor }}">
+<header role="banner" class="banner">
     <div class="container">
         {% include "partials/components/brand.njk" %}
         {% include "partials/components/navigation.njk" %}
