--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -35,9 +35,9 @@
             navigator.serviceWorker.register("/sw.js");
         </script>
         {% endif %}
+        {% if global.context == 'production' %}
         <script type="text/javascript">
         var _paq = window._paq || [];
-        /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
         _paq.push(['trackPageView']);
         _paq.push(['enableLinkTracking']);
         (function() {
@@ -48,6 +48,7 @@
             g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
         })();
         </script>
+        {% endif %}
         {% block head %}
         {% endblock %}
     </head>
