Revert "change the colour of link"
This reverts commit 68abd788a766f91a68854ba6a78b46d8be2da0f9.

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -26,7 +26,10 @@ a:focus {
   outline: none;
 }
 
-
+a:visited,
+a:visited .underline {
+  text-decoration-color: #f6e05e;
+}
 
 @supports (mask-image: url('dot.svg')) {
   main a:not([rel="external"])::after {
