feat(context): this is a better

--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -71,3 +71,9 @@ h4 + ol,
 .h3 + p {
   margin-top: 0.25rem;
 }
+
+@media screen and (min-width: 320px) and (max-width: 568px) {
+  h1 {
+    font-size: 2rem;
+  }
+}
