revert one change

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -28,7 +28,7 @@ a:focus {
 
 a:visited,
 a:visited .underline {
-  text-decoration-color: none;
+  text-decoration-color: #f6e05e;
 }
 
 @supports (mask-image: url('dot.svg')) {
