--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -1,3 +1,72 @@
+{% extends 'layouts/base.njk' %}
+
 {% set pageType = 'page--home' %}
 
-{% include 'layouts/page.njk' %}
+{% block content %}
+    <article class="container">
+        <header>
+            <div class="container inner">
+                <h1>{{ title }}</h1>
+                {% if intro %}
+                <div class="intro">{{ intro | markdownFilter | safe }}</div>
+                {% endif %}
+            </div>
+        </header>
+        {%- if sections %}
+            {%- for section in sections %}
+            {% set sectionTitle = '' %}
+            {% set sectionContent = '' %}
+            {% set desktopWidth = 'section--full' %}
+            {% set imageOrderDesktop = '' %}
+
+            {% if section.title %}
+                {% set sectionTitle = section.title %}
+            {% endif %}
+            {% if section.content %}
+                {% set sectionContent = section.content %}
+            {% endif %}
+            {% if section.desktopWidth %}
+                {% set desktopWidth = 'section--' + section.desktopWidth %}
+            {% endif %}
+            {% if section.imageOrderDesktop %}
+                {% set imageOrderDesktop = section.imageOrderDesktop %}
+            {% endif %}
+        <section id="{{ sectionTitle | slug }}" class="section
+        {{ desktopWidth }}
+        {{ 'section--image' if section.image }}
+        {{ section.desktopAlignment if section.desktopAlignment }}
+        {{ 'section--bg-' + section.backgroundColor if section.backgroundColor }}
+        {{ 'section--fg-' + section.textColor if section.textColor }}"> 
+            <div class="container">
+                {% if section.image and section.imageOrder == 'start' %}
+                <figure class="{{ imageOrderDesktop }} {{ 'shadow-' + section.imageShadow if section.imageShadow else 'indigo-500' }}">
+                    <img src="{{ section.image }}" {% if section.image2x %}srcset="{{ section.image }} 1x, {{ section.image2x }} 2x" {% endif %}alt="{{ section.imageAltText }}" width="640" height="427" />
+                </figure>
+                {% endif %}
+                <div class="section__content">
+                    {% if section.borderColor %}<span class="hr hr--{{ section.borderColor }}"></span>{% endif %}
+                    <h2>{{ sectionTitle | safe }}</h2>
+                    {% if sectionTitle == 'Latest news' %}
+                        {% if collections.posts.length %}
+                            {% for item in collections.posts | limit(2) %}
+                            {% include 'partials/components/post-excerpt.njk' %}
+                            {% endfor %}
+                            <p><a href="/news/">View all</a></p>
+                        {% else %}
+                            <p>No news items found.</p>
+                        {% endif %}
+                    {% else %}
+                    {{ sectionContent | markdownFilter | safe }}
+                    {% endif %}
+                </div>
+                {% if section.image and section.imageOrder == 'end' %}
+                <figure class="{{ imageOrderDesktop }} shadow-{{ section.imageShadow if section.imageShadow else 'indigo-500' }}">
+                    <img src="{{ section.image }}" {% if section.image2x %}srcset="{{ section.image }} 1x, {{ section.image2x }} 2x" {% endif %}alt="{{ section.imageAltText }}" width="640" height="427" />
+                </figure>
+                {% endif %}
+            </div>
+        </section>
+            {%- endfor %}
+        {%- endif %}
+    </article>
+{% endblock %}
