feat: add ideas and basic styles

--- a/src/scss/idrc.scss
+++ b/src/scss/idrc.scss
@@ -37,7 +37,7 @@
   'pages/generic',
   'pages/home',
   'pages/projects-tools',
-  'pages/news',
+  'pages/news-ideas',
   'pages/post',
   'pages/404';
 
