--- a/src/_includes/layouts/idea.njk
+++ b/src/_includes/layouts/idea.njk
@@ -6,10 +6,12 @@
     <article class="container">
         <header>
             <div class="container inner">
+                <p class="post-type">Ideas</p>
                 <h1>{{ title }}</h1>
                 <p class="metadata">
-                    <time datetime="{{ date | w3DateFilter }}" class="dt-published">Published {{ date | dateFilter }}</time><br />
                     By {{ author if author else 'IDRC Team' }}
+                    <span class="separator" aria-hidden="true"> &middot; </span>
+                    <time datetime="{{ date | w3DateFilter }}" class="dt-published">{{ date | dateFilter }}</time>
                 </p>
             </div>
         </header>
