--- a/src/_includes/layouts/news.njk
+++ b/src/_includes/layouts/news.njk
@@ -21,11 +21,9 @@
                     <span class="hr"></span>
                     <h2>{{ item.data.title }}</h2>
                     <p class="metadata">
-                        By {{ item.data.author }}
-                        {% if item.data.date %}
-                        <span aria-hidden="true"> &middot; </span>
+                        By {{ item.data.author if item.data.author else 'IDRC Team' }}
+                        <span class="separator" aria-hidden="true"> &middot; </span>
                         <time datetime="{{ item.data.date | w3DateFilter }}" class="dt-published">{{ item.data.date | dateFilter }}</time>
-                        {% endif %}
                     </p>
                     <p>{{ excerpt | striptags | safe }}</p>
                     <p>
