--- a/src/scss/pages/_post.scss
+++ b/src/scss/pages/_post.scss
@@ -14,6 +14,7 @@
     margin: 0 auto;
   }
 
+  article .post-type,
   article h1,
   article .metadata {
     padding: 0 1.5rem;
@@ -33,9 +34,33 @@
     }
   }
 
+  article .post-type {
+    font-family: $font-display;
+    font-size: 1.375rem;
+    font-weight: 600;
+
+    @media (min-width: 1024px) {
+      font-size: 1.75rem;
+    }
+  }
+
   article .metadata {
     font-size: 0.875rem;
     margin-top: 1.5rem;
+  }
+
+  article .metadata .separator {
+    color: transparent;
+    display: block;
+    height: 0.25rem;
+  }
+
+  @media (min-width: 768px) {
+    article .metadata .separator {
+      color: inherit;
+      display: inline;
+      height: auto;
+    }
   }
 
   article .content {
